--- a/src/app/layout/main-layout/main-layout.html
+++ b/src/app/layout/main-layout/main-layout.html
@@ -1,3 +1,4 @@
 <app-home-header></app-home-header>
 <app-hero-section></app-hero-section>
 <app-categories-section></app-categories-section>
+<app-products-section></app-products-section>
