feat: sessao de mensagens

--- a/src/app/layout/main-layout/main-layout.html
+++ b/src/app/layout/main-layout/main-layout.html
@@ -2,3 +2,5 @@
 <app-hero-section></app-hero-section>
 <app-categories-section></app-categories-section>
 <app-products-section></app-products-section>
+<app-highligth-section></app-highligth-section>
+<app-news-letter-section></app-news-letter-section>
