--- a/src/app/layout/main-layout/main-layout.html
+++ b/src/app/layout/main-layout/main-layout.html
@@ -4,3 +4,4 @@
 <app-products-section></app-products-section>
 <app-highligth-section></app-highligth-section>
 <app-news-letter-section></app-news-letter-section>
+<app-footer></app-footer>
