feat: correcao de footer e cor

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -7,6 +7,8 @@
 
 :root {
   --bg-primary: 244 241 236;   /* #F4F1EC */
+  --bg-background: 30 10% 10%;
+  --bg-secundary: 35 15% 90%;
   --bg-header: 237 231 223;    /* #EDE7DF */
 
   --text-primary: 43 42 40;    /* #2B2A28 */
